--- a/MovieSearchApp/Droid/Resources/layout/MovieListItem.axml
+++ b/MovieSearchApp/Droid/Resources/layout/MovieListItem.axml
@@ -35,7 +35,7 @@
         android:layout_below="@id/year"
         android:layout_alignLeft="@id/name" />
     <ImageView
-        android:id="@+id/picture"
+        android:id="@+id/image"
         android:layout_width="133px"
         android:layout_height="133px"
         android:layout_alignParentRight="true" />
